--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ botocore==1.12.186
 docutils==0.14
 jmespath==0.9.4
 python-dateutil==2.8.0
+ratelimit==2.2.1
 s3transfer==0.2.1
 six==1.12.0
 urllib3==1.25.3
